@@ -1,5 +1,5 @@
 /*
- * $Id: afp_options.c,v 1.17 2002-01-19 21:29:55 jmarcus Exp $
+ * $Id: afp_options.c,v 1.18 2002-02-06 21:58:50 jmarcus Exp $
  *
  * Copyright (c) 1997 Adrian Sun (asun@zoology.washington.edu)
  * Copyright (c) 1990,1993 Regents of The University of Michigan.
@@ -142,6 +142,7 @@ void afp_options_init(struct afp_options *options)
     options->passwdfile = _PATH_AFPDPWFILE;
     options->tickleval = 30;
     options->timeout = 4;
+    options->server_notif = 0;
     options->authprintdir = NULL;
     options->umask = 0;
 #ifdef ADMIN_GRP
@@ -235,6 +236,9 @@ int afp_options_parseline(char *buf, struct afp_options *options)
         if (options->timeout <= 0) {
             options->timeout = 4;
         }
+    }
+    if ((c = getoption(buf, "-server_notif"))) {
+        options->server_notif = 1;
     }
 
     if ((c = getoption(buf, "-server_quantum")))
